kubernetes/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  replicas: 4
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: example
          image: ttl.sh/ondrejsika/example
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 40m
              memory: 40Mi
            limits:
              cpu: 100m
              memory: 100Mi
